- fixed overflow case in modal (#45)
- updated build

--- a/src/modal/modal.less
+++ b/src/modal/modal.less
@@ -147,6 +147,7 @@
   }
   .modal-content {
     height: 100%;
+    overflow-y: scroll;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
